[package]
name = "launchthing"
version = "0.1.1"
authors = ["Prajwal Chapagain <prajwal.chapagain58@gmail.com>"]
edition = "2021"
description = "Minimalist application launcher for linux"
readme = "README.md"
homepage = "https://github.com/PrajwalCH/launchthing"
repository = "https://github.com/PrajwalCH/launchthing"
license = "GPL-3.0"
keywords = ["linux", "launcher", "application-launcher"]

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
